finally squashed massive bugs with background positioning

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,10 +17,12 @@
     overflow-x: hidden;
     overflow-y: scroll;
 
+    display:flex;
+    flex-direction: column;
     position: relative;
     height:120vh;
-    width:100vw;
-    right:10px;
+    width: 90vw;
+    left: 200px;
 }
 
 *::-webkit-scrollbar {
@@ -54,7 +56,7 @@ footer{
 aside{
     z-index: 1;
     display: flex;
-    height: 101vh;
+    height: 100%;
     width: 200px;
     position: absolute;
     left: 0px;
@@ -104,7 +106,7 @@ figcaption{
     flex-wrap: wrap;
     align-content: center; */
     position: relative;
-    right: -30px;
+    /* right: -30px; */
     margin-top:150px;
 }
 #notSoSmolCard{
@@ -199,7 +201,12 @@ margin-bottom: 20px;
 transition: width 2s;
 }
 
+#mobileFooter{
+    display:none;
 
+    position: fixed;
+    bottom: 0px;
+}
 
 @media only screen and (max-width: 1000px) {
     .navbar{
@@ -224,5 +231,11 @@ transition: width 2s;
     #notSoSmolCard{
         max-width: 100vw;
         color:var(--lb);
+    }
+    #particle{
+
+        width:100vw;
+        right:10px;
+        left:0px;
     }
 }
